생물학 페이지 내용 수정

--- a/notes/style.css
+++ b/notes/style.css
@@ -83,7 +83,7 @@ header p {
 
 .back a {
   text-decoration: none;
-  color: #4a6cff;
+  color: #5162ae;
   font-weight: bold;
   font-size: 18px;
 }
