--- a/todo/style.css
+++ b/todo/style.css
@@ -95,3 +95,27 @@ h1, h2 {
 }
 
 .memo-card button:hover { background: #2e7d32; }
+
+.back {
+  margin-top: 40px;    
+  display: flex;
+  justify-content: center;  /* math 카드 아래와 간격 */
+}
+
+.back a {
+  text-decoration: none;
+  color: #5162ae;
+  font-weight: bold;
+  font-size: 18px;
+  align-self: flex-end;
+}
+
+/* footer */
+footer {
+  position: fixed;
+  bottom: 0;
+  text-align: center;
+  padding: 20px;
+  color: #777;
+  font-size: 16px;
+}
