--- a/notes/style.css
+++ b/notes/style.css
@@ -78,7 +78,8 @@ header p {
 
 /* 홈으로 이동 버튼 */
 .back {
-  margin-top: 40px;      /* math 카드 아래와 간격 */
+  margin-top: 40px; 
+  margin-bottom: 20px;
 }
 
 .back a {
